# 445-Final-Project

./: README.md
backend backup/hello_world/main/: CMakeLists.txt  hello_world_main.c
code/backend backup/hello_world/: sdkconfig.old
code/frontend/src/: App.css  App.js  firebase.js
code/json_dummy/: dummy_data.json
frontend/: package-lock.json  package.json
frontend/src/components/: StudentDashboard.jsx
json_dummy/: dummy_data.json
notebooks/aidan/: 445 Design Document Schematic.kicad_pcb  445 Design Document Schematic.kicad_pro  README.md
notebooks/aidan/445 PCB First Order/: 445 Design Document Schematic-B_Mask.gbr  445 Design Document Schematic-B_Silkscreen.gbr  445 Design Document Schematic-Edge_Cuts.gbr  445 Design Document Schematic-F_Cu.gbr  445 Design Document Schematic-F_Mask.gbr  445 Design Document Schematic-F_Paste.gbr  445 Design Document Schematic-NPTH.drl
notebooks/conan/: README.md
notebooks/ethan/: README.md
pcb_design/: 445 Design Document Schematic.kicad_sch
pcb_design/445 PCB First Order/: 445 Design Document Schematic-B_Cu.gbr  445 Design Document Schematic-B_Paste.gbr  445 Design Document Schematic-F_Silkscreen.gbr  445 Design Document Schematic-PTH.drl  445 Design Document Schematic-job.gbrjob
pcb_design/445 PCB Second Order/: 445 Design Document Schematic-B_Cu.gbr  445 Design Document Schematic-B_Mask.gbr  445 Design Document Schematic-B_Paste.gbr  445 Design Document Schematic-B_Silkscreen.gbr  445 Design Document Schematic-F_Paste.gbr  445 Design Document Schematic-F_Silkscreen.gbr  445 Design Document Schematic-NPTH.drl
(+8 files in other folders)
